fix services view in admin
